Deployed project and updated README with instructions

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="postgres://rokjedql:rrQTTAtAiqYeM92oEr0RZxz-TiRWR4lP@kashin.db.elephantsql.com/rokjedql"
+DEVELOPMENT_DATABASE_URL="postgres://rokjedql:rrQTTAtAiqYeM92oEr0RZxz-TiRWR4lP@kashin.db.elephantsql.com/rokjedql"
+PRODUCTION_DATABASE_URL="postgres://rokjedql:rrQTTAtAiqYeM92oEr0RZxz-TiRWR4lP@kashin.db.elephantsql.com/rokjedql"
